--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title> Aaron's Webpage</title>
+	<title>VisGame Final Project</title>
 </head>
 <body>
 
-<h1>Aaron Brion</h1>
-<h2>USFCA</h2>
+<h1>VisGame</h1>
+<h2>A set of visualizations to display the rise in popularity in video games</h2>
