--- a/index.html
+++ b/index.html
@@ -7,3 +7,11 @@
 
 <h1>VisGame</h1>
 <h2>A set of visualizations to display the rise in popularity in video games</h2>
+	
+	<br><h2>Alpha Release</h2> 
+	<li><a href=""
+
+	<br><h2> Bar Chart</h2>
+	
+	
+	
