--- a/index.html
+++ b/index.html
@@ -9,9 +9,13 @@
 <h2>A set of visualizations to display the rise in popularity in video games</h2>
 	
 	<br><h2>Alpha Release</h2> 
-	<li><a href=""
+	<ul>
+	<li><a href="https://aaronjbrion.github.io/finalproject.github.io/Alpha_Release.pdf">Alpha Report</a></li>
+	<li><a href="">Multi-Set Bar Chart</a></li>
+	<li><a href="https://vizhub.com/aaronjbrion/6bac1477642f4c5781c828e6b1c32c1e">Line Chart</a></li>
+	<li><a href="https://vizhub.com/aaronjbrion/5c4f258278e84dc580514449de888ef4">Bubble Chart</a></li>
+	</ul>
 
-	<br><h2> Bar Chart</h2>
-	
+
 	
 	
