--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 	<br><h2>Alpha Release</h2> 
 	<ul>
 	<li><a href="https://aaronjbrion.github.io/finalproject.github.io/Alpha_Release.pdf">Alpha Report</a></li>
-	<li><a href="">Multi-Set Bar Chart</a></li>
-	<li><a href="https://vizhub.com/aaronjbrion/6bac1477642f4c5781c828e6b1c32c1e">Line Chart</a></li>
-	<li><a href="https://vizhub.com/aaronjbrion/5c4f258278e84dc580514449de888ef4">Bubble Chart</a></li>
+	<li><a href="https://aaronjbrion.github.io/finalproject.github.io/finalBarChart.jpg">Multi-Set Bar Chart from RawGraphs</a></li>
+	<li><a href="https://vizhub.com/aaronjbrion/6bac1477642f4c5781c828e6b1c32c1e">Line Chart in D3</a></li>
+	<li><a href="https://vizhub.com/aaronjbrion/5c4f258278e84dc580514449de888ef4">Bubble Chart in D3</a></li>
 	</ul>
 
 
