--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
 	<li><a href="https://vizhub.com/aaronjbrion/5c4f258278e84dc580514449de888ef4">Bubble Chart in D3</a></li>
 	</ul>
 
-
+	<br><h2>Beta Release</h2>
+	<ul>
+	<li>
 	
 	
