--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<br><h2>Beta Release</h2>
 	<ul>
-		<li><a href="https://vizhub.com/aaronjbrion/4eb211e55517499fb5b5a90d76a25fe9">Bar Chart</a></li>
+		<li><a href="https://vizhub.com/aaronjbrion/4eb211e55517499fb5b5a90d76a25fe9">Bar Chart</a><iframe width="560" height="292" src="https://vizhub.com/aaronjbrion/4eb211e55517499fb5b5a90d76a25fe9?mode=embed" title="Player Count Bar Chart" frameborder="0" ></iframe></li>
 		<li><a href="https://vizhub.com/aaronjbrion/6bac1477642f4c5781c828e6b1c32c1e">Line Chart</a></li>
 		<li><a href="https://vizhub.com/aaronjbrion/c9310d3cd30840de9ffeecfcc90e26a0">Scatter Plot</a></li>
 		<li><a href="https://vizhub.com/aaronjbrion/5c4f258278e84dc580514449de888ef4">Bubble Chart</a></li>
