--- a/index.html
+++ b/index.html
@@ -1,27 +1,79 @@
 <!DOCTYPE html>
-<html>
+
+<html lang="en">
+
 <head>
-	<title>VisGame Final Project</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>${title}</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 </head>
+
 <body>
+  <section class="hero is-primary is-bold">
+    <div class="hero-body">
+      <div class="container">
+        <h1 class="title">Message Board</h1>
+        <h2 class="subtitle">
+          <i class="fas fa-calendar-alt"></i>
+          &nbsp;Updated ${timestamp}
+        </h2>
+      </div>
+    </div>
+  </section>
 
-<h1>VisGame</h1>
-<h2>A set of visualizations to display the rise in popularity in video games</h2>
-	
-	<br><h2>Alpha Release</h2> 
-	<ul>
-	<li><a href="https://aaronjbrion.github.io/finalproject.github.io/Alpha_Release.pdf">Alpha Report</a></li>
-	<li><a href="https://aaronjbrion.github.io/finalproject.github.io/finalBarChart.jpg">Multi-Set Bar Chart from RawGraphs</a></li>
-	<li><a href="https://vizhub.com/aaronjbrion/6bac1477642f4c5781c828e6b1c32c1e">Line Chart in D3</a></li>
-	<li><a href="https://vizhub.com/aaronjbrion/5c4f258278e84dc580514449de888ef4">Bubble Chart in D3</a></li>
-	</ul>
+  <section class="section">
+    <div class="container">
+      <h2 class="title">Messages</h2>
 
-	<br><h2>Beta Release</h2>
-	<ul>
-		<li><a href="https://vizhub.com/aaronjbrion/4eb211e55517499fb5b5a90d76a25fe9">Bar Chart</a><iframe width="560" height="292" src="https://vizhub.com/aaronjbrion/4eb211e55517499fb5b5a90d76a25fe9?mode=embed" title="Player Count Bar Chart" frameborder="0" ></iframe></li>
-		<li><a href="https://vizhub.com/aaronjbrion/6bac1477642f4c5781c828e6b1c32c1e">Line Chart</a><iframe width="560" height="292" src="https://vizhub.com/aaronjbrion/6bac1477642f4c5781c828e6b1c32c1e?mode=embed" title="Player Count Line Chart" frameborder="0" ></iframe></li>
-		<li><a href="https://vizhub.com/aaronjbrion/c9310d3cd30840de9ffeecfcc90e26a0">Scatter Plot</a><iframe width="560" height="292" src="https://vizhub.com/aaronjbrion/c9310d3cd30840de9ffeecfcc90e26a0?mode=embed" title="Player Count Scatter Plot" frameborder="0" ></iframe></li>
-		<li><a href="https://vizhub.com/aaronjbrion/5c4f258278e84dc580514449de888ef4">Bubble Chart</a><iframe width="560" height="292" src="https://vizhub.com/aaronjbrion/5c4f258278e84dc580514449de888ef4?mode=embed" title="Player Count Bubble Chart" frameborder="0" ></iframe></li>
-	</ul>
-	
+      <div class="box">
+        <i class="fas fa-quote-left has-text-grey-light"></i> ${message} <i class="fas fa-quote-right has-text-grey-light"></i>
+        <p class="has-text-grey is-size-7 has-text-right"><em><i class="fas fa-user has-text-grey-light"></i> Posted by ${name} on ${timestamp}.</em></p>
+      </div>
+
+    </div>
+  </section> <!-- end messages -->
+
+  <!-- show form -->
+  <section class="section">
+    <div class="container">
+      <h2 class="title">Add Message</h2>
+
+      <form method="${method}" action="${action}">
+        <div class="field">
+          <label class="label" for="name">Name</label>
+          <div class="control has-icons-left">
+            <input class="input" type="text" name="name" id="name" placeholder="Enter your name here.">
+            <span class="icon is-small is-left">
+              <i class="fas fa-user"></i>
+            </span>
+          </div>
+        </div>
+
+        <div class="field">
+          <label class="label" for="message">Message</label>
+          <div class="control">
+            <textarea class="textarea" name="message" id="message" placeholder="Enter your message here."></textarea>
+          </div>
+        </div>
+
+        <div class="control">
+          <button class="button is-primary" type="submit">
+            <i class="fas fa-comment"></i>
+            &nbsp;Post Message
+          </button>
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <footer class="footer">
+    <div class="content has-text-centered">
+      <p>This request was handled by thread ${thread}.</p>
+    </div>
+  </footer>
+</body>
+
+</html>
 	
