--- a/index.html
+++ b/index.html
@@ -19,6 +19,29 @@
       </div>
     </div>
   </section>
+	
+	<section class="section">
+  <div class="container">
+    
+    <h2 class="subtitle"><a href="finalBarChar.html">asdfasdf</a></h2>
+    <embed src="finalBarChart.html" type="text/html" width="100%" height="700px" />
+    <p>asdfasdf</p>
+    <br>
+    <h2 class="subtitle"><a href="finalLineChart.html">asdasdfa</a></h2>
+    <embed src="finalLineChart.html" type="text/html" width="100%" height="700px" />
+    <p>This visualization is used to exhibit in the 3 key regions games are Sold: North America, Europe and Japan; which games have been their top sold sales.</p>
+    <p>asdfasdf</p>
+    <br>
+    <h2 class="subtitle"><a href="finalProportionalSymbol.html">asdfasdf</a></h2>
+    <embed src="finalProportionalSymbol.html" type="text/html" width="100%" height="700px" />
+    <p>asdfasdf
+    </p>
+    <br>
+    <h2 class="subtitle"><a href="finalScatterPlot.html">asdfasdf</a></h2>
+    <embed src="finalScatterPlot.html" type="text/html" width="100%" height="700px" />
+  </div>
+</section>
+
 
 
    
