--- a/finalProportionalSymbol.html
+++ b/finalProportionalSymbol.html
@@ -42,6 +42,8 @@
         const circleSize = d3.scaleLinear().domain([1000000, 50500000])
             .range([7, 100])
 
+        var legendRadius = d3.scaleSqrt().domain([0, 10039107]).range([0, 50])
+
         var tooltip = d3.select("#proportionalSymbol")
             .append("div")
             .style("opacity", 1)
@@ -94,6 +96,119 @@
             .on("tick", function(d){circles
             .attr("cx", function(d){return d.x})
             .attr("cy", function(d){return d.y})})
+
+        svg.append("rect")
+            .attr("x", 450)
+            .attr("y", 100)
+            .attr("width", 10)
+            .attr("height", 10)
+            .attr("fill", "#e41a1c")
+
+        svg.append("rect")
+            .attr("x", 450)
+            .attr("y", 120)
+            .attr("width", 10)
+            .attr("height", 10)
+            .attr("fill", "#377eb8")
+
+        svg.append("rect")
+            .attr("x", 450)
+            .attr("y", 140)
+            .attr("width", 10)
+            .attr("height", 10)
+            .attr("fill", "#4daf4a")
+
+        svg.append("rect")
+            .attr("x", 450)
+            .attr("y", 160)
+            .attr("width", 10)
+            .attr("height", 10)
+            .attr("fill", "#FFA500")
+
+        svg.append("text")
+            .attr("transform", "translate(100, 0)")
+            .attr("x", 370)
+            .attr("y", 110)
+            .attr("font-size", "15px")
+            .text("Rainbow Six Siege")
+
+        svg.append("text")
+            .attr("transform", "translate(100, 0)")
+            .attr("x", 370)
+            .attr("y", 130)
+            .attr("font-size", "15px")
+            .text("PUBG")
+
+        svg.append("text")
+            .attr("transform", "translate(100, 0)")
+            .attr("x", 370)
+            .attr("y", 150)
+            .attr("font-size", "15px")
+            .text("GTA V")
+
+        svg.append("text")
+            .attr("transform", "translate(100, 0)")
+            .attr("x", 370)
+            .attr("y", 170)
+            .attr("font-size", "15px")
+            .text("CSGO")
+
+        svg.append("circle")
+            .attr('cx', 110)
+            .attr("cy", 520)
+            .attr('r', '70px')
+            .attr("fill", "#ffffff")
+            .attr("stroke", "black")
+
+        svg.append("circle")
+            .attr('cx', 110)
+            .attr("cy", 550)
+            .attr('r', '40px')
+            .attr("fill", "#ffffff")
+            .attr("stroke", "black")
+
+        svg.append("circle")
+            .attr('cx', 110)
+            .attr("cy", 570)
+            .attr('r', '20px')
+            .attr("fill", "#ffffff")
+            .attr("stroke", "black")
+
+        svg.append("circle")
+            .attr('cx', 110)
+            .attr("cy", 586)
+            .attr('r', '5px')
+            .attr("fill", "#ffffff")
+            .attr("stroke", "black")
+
+        svg.append("text")
+            .attr("transform", "translate(100, 0)")
+            .attr("x", -7)
+            .attr("y", 581)
+            .attr("font-size", "11px")
+            .text("200000")
+
+        svg.append("text")
+            .attr("transform", "translate(100, 0)")
+            .attr("x", -9)
+            .attr("y", 550)
+            .attr("font-size", "11px")
+            .text("4000000")
+
+        svg.append("text")
+            .attr("transform", "translate(100, 0)")
+            .attr("x", -11)
+            .attr("y", 508)
+            .attr("font-size", "11px")
+            .text("20000000")
+
+        svg.append("text")
+            .attr("transform", "translate(100, 0)")
+            .attr("x", -13)
+            .attr("y", 447)
+            .attr("font-size", "11px")
+            .text("40000000")
+
     })
 
 </script>
