--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
 	<section class="section">
   <div class="container">
     
-    <h2 class="subtitle"><a href="finalBarChar.html">asdfasdf</a></h2>
+    <h2 class="subtitle"><a href="finalBarChar.html">Bar Chart</a></h2>
     <embed src="finalBarChart.html" type="text/html" width="100%" height="700px" />
-    <p>asdfasdf</p>
+    <p>This bar chart shows the peak amount of players per game by year.</p>
     <br>
-    <h2 class="subtitle"><a href="finalLineChart.html">asdasdfa</a></h2>
+    <h2 class="subtitle"><a href="finalLineChart.html">Line Chart</a></h2>
     <embed src="finalLineChart.html" type="text/html" width="100%" height="700px" />
-    <p>This visualization is used to exhibit in the 3 key regions games are Sold: North America, Europe and Japan; which games have been their top sold sales.</p>
-    <p>asdfasdf</p>
+    <p>This line chart shows the trends of each game depending on the month from 2017-2021.</p>
     <br>
-    <h2 class="subtitle"><a href="finalProportionalSymbol.html">asdfasdf</a></h2>
+    <h2 class="subtitle"><a href="finalProportionalSymbol.html">Proportional Symbol Map</a></h2>
     <embed src="finalProportionalSymbol.html" type="text/html" width="100%" height="700px" />
-    <p>asdfasdf
+    <p>This proportional symbol map shows the max amount of players from each game.
     </p>
     <br>
-    <h2 class="subtitle"><a href="finalScatterPlot.html">asdfasdf</a></h2>
+    <h2 class="subtitle"><a href="finalScatterPlot.html">Bubble Chart</a></h2>
     <embed src="finalScatterPlot.html" type="text/html" width="100%" height="700px" />
+	  <p>This bubble chart also shows the peak amount of players depending on the year.</p>
   </div>
 </section>
 
