--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
     <h2 class="subtitle"><a href="finalScatterPlot.html">Bubble Chart</a></h2>
     <embed src="finalScatterPlot.html" type="text/html" width="100%" height="700px" />
 	  <p>This bubble chart also shows the peak amount of players depending on the year.</p>
+	  
+	  <br>
+	  <p>References:</p>
+	  <a href="https://steamcharts.com/">Steam Charts</a>
   </div>
 </section>
 
