--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 	<section class="section">
   <div class="container">
     
-    <h2 class="subtitle"><a href="finalBarChar.html">Bar Chart</a></h2>
+    <h2 class="subtitle"><a href="finalBarChart.html">Bar Chart</a></h2>
     <embed src="finalBarChart.html" type="text/html" width="100%" height="700px" />
-    <p>This bar chart shows the peak amount of players per game by year.</p>
+    <p>This bar chart shows the peak amount of players per game by year. Looking at this data you can see that PUBG had a much larger peak than the other games like CSGO, Grand Theft Auto V, and Rainbow Six Siege.</p>
     <br>
     <h2 class="subtitle"><a href="finalLineChart.html">Line Chart</a></h2>
     <embed src="finalLineChart.html" type="text/html" width="100%" height="700px" />
