--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
   <title>VisGame Final Project</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/js/all.min.js" integrity="sha512-Tn2m0TIpgVyTzzvmxLNuqbSJH3JP8jm+Cy3hvHrW7ndTDcJ1w5mBiksqDBb8GpE2ksktFvDB/ykZ0mDpsZj20w==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+	<style>h2 {text-align: center;}
+		p {text-align: center;}
+		div {text-align: center;}
+	</style>
 </head>
 
 <body>
@@ -29,16 +33,16 @@
     <br>
     <h2 class="subtitle"><a href="finalLineChart.html">Line Chart</a></h2>
     <embed src="finalLineChart.html" type="text/html" width="100%" height="700px" />
-    <p>This line chart shows the trends of each game depending on the month from 2017-2021.</p>
+    <p>This line chart displays the trends of each game depending on the month from 2017-2021. As time goes on we can see a decrease in most of these games except for CSGO which had a slight increase.</p>
     <br>
     <h2 class="subtitle"><a href="finalProportionalSymbol.html">Proportional Symbol Map</a></h2>
     <embed src="finalProportionalSymbol.html" type="text/html" width="100%" height="700px" />
-    <p>This proportional symbol map shows the max amount of players from each game.
+    <p>This proportional symbol map shows the max amount of players from each game. This visualization also shows the popularity with PUBG as it shows the maximum peak player count from 2017-2022.
     </p>
     <br>
     <h2 class="subtitle"><a href="finalScatterPlot.html">Bubble Chart</a></h2>
     <embed src="finalScatterPlot.html" type="text/html" width="100%" height="700px" />
-	  <p>This bubble chart also shows the peak amount of players depending on the year.</p>
+	  <p>This bubble chart also shows the peak amount of players depending on the year. This visualization is similar to the bar chart since it shows the popularity in PUBG and the decrease in players in 2019. Grand Theft Auto V and Rainbow Six Siege stayed consistent throughout the last five years.</p>
 	  
 	  <br>
 	  <p>References:</p>
