--- a/index.html
+++ b/index.html
@@ -28,20 +28,20 @@
   <div class="container">
     
     <h2 class="subtitle"><a href="finalBarChart.html">Bar Chart</a></h2>
-    <embed src="finalBarChart.html" type="text/html" width="100%" height="700px" />
+	  <center><embed src="finalBarChart.html" type="text/html" width="100%" height="700px" /></center>
     <p>This bar chart shows the peak amount of players per game by year. Looking at this data you can see that PUBG had a much larger peak than the other games like CSGO, Grand Theft Auto V, and Rainbow Six Siege.</p>
     <br>
     <h2 class="subtitle"><a href="finalLineChart.html">Line Chart</a></h2>
-    <embed src="finalLineChart.html" type="text/html" width="100%" height="700px" />
+    <center><embed src="finalLineChart.html" type="text/html" width="100%" height="700px" /></center>
     <p>This line chart displays the trends of each game depending on the month from 2017-2021. As time goes on we can see a decrease in most of these games except for CSGO which had a slight increase.</p>
     <br>
     <h2 class="subtitle"><a href="finalProportionalSymbol.html">Proportional Symbol Map</a></h2>
-    <embed src="finalProportionalSymbol.html" type="text/html" width="100%" height="700px" />
+    <center><embed src="finalProportionalSymbol.html" type="text/html" width="100%" height="700px" /></center>
     <p>This proportional symbol map shows the max amount of players from each game. This visualization also shows the popularity with PUBG as it shows the maximum peak player count from 2017-2022.
     </p>
     <br>
     <h2 class="subtitle"><a href="finalScatterPlot.html">Bubble Chart</a></h2>
-    <embed src="finalScatterPlot.html" type="text/html" width="100%" height="700px" />
+    <center><embed src="finalScatterPlot.html" type="text/html" width="100%" height="700px" /></center>
 	  <p>This bubble chart also shows the peak amount of players depending on the year. This visualization is similar to the bar chart since it shows the popularity in PUBG and the decrease in players in 2019. Grand Theft Auto V and Rainbow Six Siege stayed consistent throughout the last five years.</p>
 	  
 	  <br>
