--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <p>This proportional symbol map shows the max amount of players from each game. This visualization also shows the popularity with PUBG as it shows the maximum peak player count from 2017-2022.
     </p>
     <br>
-    <h2 class="subtitle"><a href="finalScatterPlot.html">Bubble Chart</a></h2>
+    <h2 class="subtitle"><a href="finalScatterPlot.html">Scatter Plot</a></h2>
     <center><embed src="finalScatterPlot.html" type="text/html" width="100%" height="700px" /></center>
 	  <p>This bubble chart also shows the peak amount of players depending on the year. This visualization is similar to the bar chart since it shows the popularity in PUBG and the decrease in players in 2019. Grand Theft Auto V and Rainbow Six Siege stayed consistent throughout the last five years.</p>
 	  
