--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <br>
     <h2 class="subtitle"><a href="finalScatterPlot.html">Scatter Plot</a></h2>
     <center><embed src="finalScatterPlot.html" type="text/html" width="100%" height="700px" /></center>
-	  <p>This bubble chart also shows the peak amount of players depending on the year. This visualization is similar to the bar chart since it shows the popularity in PUBG and the decrease in players in 2019. Grand Theft Auto V and Rainbow Six Siege stayed consistent throughout the last five years.</p>
+	  <p>This scatter plot also shows the peak amount of players depending on the year. This visualization is similar to the bar chart since it shows the popularity in PUBG and the decrease in players in 2019. Grand Theft Auto V and Rainbow Six Siege stayed consistent throughout the last five years.</p>
 	  
 	  <br>
 	  <p>References:</p>
